Fix overflow issue on Modals, clickoutside functionality, fix web address, phone fields on form

--- a/WpForm/fullStyles.css
+++ b/WpForm/fullStyles.css
@@ -742,12 +742,6 @@ select {
 .z-20 {
 	z-index: 20;
 }
-.z-50 {
-	z-index: 50;
-}
-.z-10 {
-	z-index: 10;
-}
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
@@ -945,7 +939,7 @@ h1 {
 	background-position: center;
 }
 .hero-content {
-	z-index: 10;
+	z-index: 20;
 	display: flex;
 	height: 100vh;
 	max-width: 42rem;
@@ -1543,7 +1537,7 @@ footer.footer {
 /* Modal */
 .modal {
 	position: fixed;
-	top: 6rem;
+	top: 2.5rem;
 	left: 0px;
 	display: flex;
 	height: 100%;
@@ -1553,6 +1547,12 @@ footer.footer {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 	--tw-bg-opacity: 0.5;
+}
+@media (min-width: 640px) {
+
+	.modal {
+		top: 0px;
+	}
 }
 .modal-open {
 	overflow: hidden;
@@ -1590,12 +1590,7 @@ footer.footer {
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 .modal-inner {
-	position: relative;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 0px;
-	margin-bottom: 2rem;
-	display: flex;
+	display: inline-block;
 	--tw-translate-x: 0;
 	--tw-translate-y: 0;
 	--tw-rotate: 0;
@@ -1604,17 +1599,10 @@ footer.footer {
 	--tw-scale-x: 1;
 	--tw-scale-y: 1;
 	transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 	border-radius: 0.75rem;
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-	padding-left: 1rem;
-	padding-right: 1rem;
-	padding-top: 3rem;
-	padding-bottom: 5rem;
-	text-align: center;
+	text-align: left;
 	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 	transition-property: all;
@@ -1624,7 +1612,8 @@ footer.footer {
 @media (min-width: 640px) {
 
 	.modal-inner {
-		margin-top: 6rem;
+		margin-top: 2rem;
+		margin-bottom: 2rem;
 	}
 
 	.modal-inner {
@@ -1639,7 +1628,30 @@ footer.footer {
 		vertical-align: middle;
 	}
 }
+.modal-flex {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	padding-top: 1rem;
+	padding-bottom: 5rem;
+	text-align: center;
+}
+@media (min-width: 640px) {
 
+	.modal-flex {
+		margin-top: 0px;
+	}
+
+	.modal-flex {
+		display: block;
+	}
+
+	.modal-flex {
+		padding: 0px;
+	}
+}
 /* Modal Headline */
 .modal-headline {
 	padding-left: 1.5rem;
