--- a/src/css/index.css
+++ b/src/css/index.css
@@ -23,7 +23,7 @@ h1 {
   @apply absolute h-screen w-full bg-center bg-cover;
 }
 .hero-content {
-  @apply z-20 text-white items-start justify-center flex flex-col pl-6 h-screen max-w-2xl;
+  @apply z-10 text-white items-start justify-center flex flex-col pl-6 h-screen max-w-2xl;
 }
 .hero-content p {
   @apply block mt-2 text-2xl max-w-[40ch];
@@ -179,7 +179,7 @@ footer.footer {
 
 /* Modal */
 .modal {
-  @apply fixed top-10 sm:top-0 left-0 w-full h-full flex items-center justify-center bg-black bg-opacity-50;
+  @apply fixed top-24 left-0 w-full h-full flex items-center justify-center bg-black bg-opacity-50;
 }
 .modal-open {
   @apply overflow-hidden;
@@ -195,11 +195,9 @@ footer.footer {
   @apply text-white;
 }
 .modal-inner {
-  @apply inline-block bg-white rounded-xl text-left shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-4xl sm:w-full;
+  @apply  mx-auto bg-white rounded-xl shadow-xl transform transition-all mt-0 sm:mt-24 mb-8 sm:align-middle sm:max-w-4xl sm:w-full relative flex flex-col items-center justify-center pt-12 px-4 pb-20 text-center;
 }
-.modal-flex {
-  @apply flex items-center justify-center pt-4 px-4 pb-20 text-center sm:block sm:p-0 sm:mt-0;
-}
+
 /* Modal Headline */
 .modal-headline {
   @apply pt-12 pb-6 px-6 text-center;
